force-app/main/default/objects/Contact/fields/AddressNo__c.field-meta.xml
<CustomField>
    <fullName>AddressNo__c</fullName>
    <label>Address No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>