force-app/main/default/objects/Contact/fields/ConsentDate__c.field-meta.xml
<CustomField>
    <fullName>ConsentDate__c</fullName>
    <label>Consent Date</label>
    <type>Date</type>
</CustomField>