force-app/main/default/objects/Contact/fields/ContactCode__c.field-meta.xml
<CustomField>
    <fullName>ContactCode__c</fullName>
    <label>Contact Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>