force-app/main/default/objects/Contact/fields/EducationLevel__c.field-meta.xml
<CustomField>
    <fullName>EducationLevel__c</fullName>
    <description>ระดับการศึกษา</description>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Vocational Certificate</fullName>
            </value>
            <value>
                <fullName>Vocational Certificate</fullName>
            </value>
            <value>
                <fullName>Doctor of philosophy degree</fullName>
            </value>
            <value>
                <fullName>Master&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Bachaelor&apos;s degree</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Secondary School</fullName>
            </value>
            <value>
                <fullName>Primary School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>