force-app/main/default/objects/Contact/fields/IDCardNumber__c.field-meta.xml
<CustomField>
    <fullName>IDCardNumber__c</fullName>
    <description>หมายเลขบัตรประชาชน</description>
    <label>ID Card Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>