force-app/main/default/objects/Contact/fields/IsDummy__c.field-meta.xml
<CustomField>
    <fullName>IsDummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dummy</label>
    <type>Checkbox</type>
</CustomField>