force-app/main/default/objects/Contact/fields/LineID__c.field-meta.xml
<CustomField>
    <fullName>LineID__c</fullName>
    <description>ไอดี Line</description>
    <label>Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>