force-app/main/default/objects/Contact/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <description>สถานะการสมรส</description>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Widow</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Unregistered Marriage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>