force-app/main/default/objects/Contact/fields/RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>RecordStatus__c</fullName>
    <description>สถานะของ record</description>
    <label>Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>