force-app/main/default/objects/Contact/fields/Resigned__c.field-meta.xml
<CustomField>
    <fullName>Resigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>สถานะการทำงาน</description>
    <label>Resigned</label>
    <type>Checkbox</type>
</CustomField>