force-app/main/default/objects/Contact/fields/ResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>ResponseMessage__c</fullName>
    <label>Response Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>