force-app/main/default/objects/Contact/fields/SaleRemark__c.field-meta.xml
<CustomField>
    <fullName>SaleRemark__c</fullName>
    <description>ข้อมูลเพิ่มเติมจาก Sales</description>
    <label>Sale Remark</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>