force-app/main/default/objects/Contact/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>คำนำหน้าชื่อ</description>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>บจก.</fullName>
            </value>
            <value>
                <fullName>บมจ.</fullName>
            </value>
            <value>
                <fullName>หจก.</fullName>
            </value>
            <value>
                <fullName>หสม.</fullName>
            </value>
            <value>
                <fullName>ร้าน</fullName>
            </value>
            <value>
                <fullName>ห้าง</fullName>
            </value>
            <value>
                <fullName>ธนาคาร</fullName>
            </value>
            <value>
                <fullName>ร.ต.</fullName>
            </value>
            <value>
                <fullName>น.ต.</fullName>
            </value>
            <value>
                <fullName>นาย</fullName>
            </value>
            <value>
                <fullName>นาง</fullName>
            </value>
            <value>
                <fullName>นางสาว</fullName>
            </value>
            <value>
                <fullName>ว่าที่ ร.ต.</fullName>
            </value>
            <value>
                <fullName>หม่อมหลวง</fullName>
            </value>
            <value>
                <fullName>จ.ส.ต.</fullName>
            </value>
            <value>
                <fullName>ร.อ.หญิง</fullName>
            </value>
            <value>
                <fullName>พ.ต.อ.</fullName>
            </value>
            <value>
                <fullName>ร.ต.อ.</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>คุณ</fullName>
            </value>
            <value>
                <fullName>ว่าที่ ร.ต.หญิง</fullName>
            </value>
            <value>
                <fullName>ส.อ.</fullName>
            </value>
            <value>
                <fullName>คณะบุคคล</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>