force-app/main/default/objects/Contact/fields/SecondaryMobile__c.field-meta.xml
<CustomField>
    <fullName>SecondaryMobile__c</fullName>
    <inlineHelpText>Secondary Mobile</inlineHelpText>
    <label>Secondary Mobile</label>
    <type>Phone</type>
</CustomField>