force-app/main/default/objects/Contact/fields/SubDistrict__c.field-meta.xml
<CustomField>
    <fullName>SubDistrict__c</fullName>
    <label>Sub District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>